--- a/mainBib.bib
+++ b/mainBib.bib
@@ -136,6 +136,8 @@ url = {http://web.archive.org/web/20160324141917/http://www.robotshop.com/media/
    	url = "https://www.researchgate.net/publication/262055313_Identifying_Active_Travel_Behaviors_in_Challenging_Environments_Using_GPS_Accelerometers_and_Machine_Learning_Algorithms",
 }
 
+
+
 @MISC{fig_ros_control,
 	author = "Dave Coleman",
 	title = {ros\_control},
@@ -149,6 +151,13 @@ url = {http://web.archive.org/web/20160324141917/http://www.robotshop.com/media/
 	title = "Sabertooth Dual 12A 6V-24V Regenerative Motor Driver",
 	note = "[Online: accessed April 11, 2017]",
 	url = {https://web.archive.org/web/20160402162832/http://www.robotshop.com/en/sabertooth-dual-regenerative-motor-driver.html},
+}
+
+@MISC{robot_localization_wiki,
+	author = "Tom Moore",
+	title = {robot\_localization wiki},
+	note = "[Online: accessed July 17, 2017]",
+	url = {http://docs.ros.org/kinetic/api/robot_localization/html/integrating_gps.html},
 }
 
 @ONLINE{sabertooth_arduino_tut,
