--- a/main.tex
+++ b/main.tex
@@ -22,6 +22,7 @@
 %% Page Intentionally Left Blank'', use the ``leftblank'' option, as
 %% above. 
 
+% one-sided printing
 \documentclass[12pt, doublespace]{ncfthesis}
 \usepackage{lgrind}
 \usepackage[fleqn]{mathtools}
