--- a/ncfthesis.cls
+++ b/ncfthesis.cls
@@ -157,8 +157,8 @@
 %	into 1in margin.
 %  Draft mode brings the header back down.
 
-\setlength{\oddsidemargin}{0.25in}	% 1.25in left margin 
-\setlength{\evensidemargin}{0.25in}	% 1.25in left margin (even pages)
+\setlength{\oddsidemargin}{0.5in}	% 1.25in left margin (odd pages)
+\setlength{\evensidemargin}{0.5in}	% 1.25in left margin (even pages)
 \setlength{\topmargin}{0.0in}		% 1in top margin
 \setlength{\textwidth}{6.0in}		% 6.0in text - 1.25in rt margin
 \setlength{\textheight}{9in}		% Body ht for 1in margins
